10.3.0 (25-07-2023)
- New Feature: New tuition condition rule, to check the registration ingression year (or start execution year)
- Bug Fix: Only create tuition by force, in create academic debts strategy executed by academic debt generation rules, if the registration is to pay gratuities
- Bug Fix: In tuition importation, fix the ingression type condition rule importation
- Improvement: Allow default tuition payment plan configured with other installment calculation amounts than fixed amount type. Only check if the default tuition payment plan is fixed amount when used as indexed for ECTS calculation amount
- Refactor: Remove the check that all tuition payment plans are for only one finantial entity.
- Bug Fix: Fix installment name buider, when using the degree code

10.2.0 (18-07-2023)
- Refactor: Remove ITuitionTreasuryEvent methods from AcademicTreasuryEvent
- Refactor: Rename AcademicTreasuryEvent::getAmountToPay to AcademicTreasuryEvent::getAmountWithVatToPay
- Refactor: Rename AcademicTreasuryEvent::getExemptedAmount to AcademicTreasuryEvent::getNetExemptedAmount
- Refactor: Replace invocation of TreasuryEvent::getAmountWithVatToPay(customer, null) to TreasuryEvent::getAmountWithVatToPay(customer)
- Refactor: Rename ReservationTaxEventTarget::getAmountToPay to ReservationTaxEventTarget::getAmountWithVatToPay
- Refactor: Remove references of ITuitionTreasuryEvent in AcademicTreasuryBridgeImpl
- Refactor: Add TuitionInstallmentTariff property in bean TuitionDebitEntryBean, to help in recalculation of tuition installments
- Refactor: Add helper method TuitionInstallmentTariff::createRecalculationDebitEntryForRegistration, to create an additional recalculated installment debit entry
- Refactor: Remove empty method TuitionInstallmentTariff::updatePriceValuesInEvent
- Improvement: Add new service to create tuition payment plan debts, that support recalculation of installments and and easier fluid interface to pass the arguments to the service